# note2video

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.yaml  note2video-gui.spec  pyproject.toml
.github/workflows/: ci.yml
docs/: chat-history-export.md  cli.md  interaction-history.md  project-history.md
docs/decisions/: 001-product-positioning.md  002-cli-first-strategy.md  003-mvp-scope.md
editor-electron/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
editor-electron/electron/: main.cjs  preload.cjs
editor-electron/src/: App.tsx  global.css  vite-env.d.ts
editor-electron/src/components/: FabricStage.tsx  TimelineSection.tsx  WaveformPanel.tsx
editor-electron/src/lib/: canvasLayout.ts  projectLoader.ts  projectTypes.ts
examples/: test第一个PPt.pptx
scripts/: minimax_ping.py  note2video_gui_entry.py  pptx_export_and_stitch_1x4.py  split_pptx_to_pdf_chunks.py
skills/note2video/: README.md  SKILL.md
src/note2video/: __init__.py  __main__.py  build_profile.py  text_segmentation.py  user_config.py  video_canvas.py
src/note2video/app/: __init__.py  pipeline_service.py  publish_service.py
src/note2video/cli/: __init__.py  main.py
src/note2video/compose/: __init__.py  pptx.py
tests/: test_build_profile.py  test_cli.py  test_gui_pipeline_adapter.py  test_gui_preview.py  test_pipeline_service.py  test_publish_service.py  test_publish_web.py  test_render_bgm_mix_filter.py  test_render_subtitle_style.py  test_subtitle_wrap.py  test_text_segmentation.py  test_user_config.py  test_video_canvas.py
(+19 files in other folders)
